[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.0.4"
actix-web = { version = "^4"}
actix-web-httpauth = { version = "0.6.0"  }
actix-service = "^2"
actix-cors = "0.6.1"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
tokio = {version = "1.17.0", features = ["sync", "rt", "time"] }
dotenv = "0.15.0"
futures = "0.3.15"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
actix-rt = "2.0.2"
bincode = "1.3.3"
zmq = "0.9.2"
boringauth = "*"

jsonwebtoken = "7.1.0"
lazy_static = "1.4.0"
time = "0.1.43"

rust_decimal_macros = { version = "1.12.3" }
rust_decimal= { version = "1.12.3" }

uuid = { version = "0.8", features = ["serde", "v4"] }
bigdecimal = { version = "0.1.2", features = ["serde"]}

[dependencies.utils]
path = "../utils"

[dependencies.models]
path = "../models"

[dependencies.xerror]
path = "../xerror"

[dependencies.msgs]
path = "../msgs"

[dependencies.core_types]
path = "../core_types"

[dependencies.actix-ratelimit]
path = "../actix-ratelimit"