[package]
name = "bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "0.8", features = ["serde", "v4"] }

rust_decimal_macros = { version = "1.12.3"}
rust_decimal= { version = "1.12.3" }
bigdecimal = { version = "0.1.2", features = ["serde"]}
crossbeam-channel = "0.5"
bincode = "1.3.3"
zmq = "0.9.2"
lightning-invoice = { version = "0.13.0" }
slog = "2.5.2"

tokio = { version = "1.17.0", features = ["full"] }

r2d2 = "0.8.8"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }

influxdb2 = "0.1.1"
futures = "0.3.21"
rand_core = "0.6.4"
sha256 = "1.1.1"

serde = { version = "1.0.110", features = ["derive"] }

log = "0.4"

[dependencies.msgs]
path = "../msgs"

[dependencies.xerror]
path = "../xerror"

[dependencies.utils]
path = "../utils"

[dependencies.core_types]
path = "../core_types"

[dependencies.models]
path = "../models"

[dependencies.lnd_connector]
path = "../lnd_connector"
