[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.110", features = ["derive"] }
structopt = "0.3.21"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.utils]
path = "../utils"

[dependencies.msgs]
path = "../msgs"

