[package]
name = "dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
bincode = "1.3.3"
crossbeam = "0.8.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

rust_decimal_macros = { version = "1.12.3"}
rust_decimal= { version = "1.12.3" }

log = { version = "0.4.16" }

[dependencies.msgs]
path = "../msgs"

[dependencies.xerror]
path = "../xerror"

[dependencies.utils]
path = "../utils"

[dependencies.core_types]
path = "../core_types"

[dependencies.models]
path = "../models"

[dependencies.kollider_hedging]
path = "../kollider_hedging"

[dependencies.ws_client]
path = "../ws_client"
