[package]
name = "electrum_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "^0.29" }
bitcoincore-rpc = { version = "^0.16" }
reqwest = { version = "^0.11" }
serde = { version = "^1" }
serde_json = { version = "^1" }
hex = { version = "^0.4" }
tokio = { version = "^1", features = [ "macros", "rt-multi-thread" ] }

[dependencies.utils]
path = "../utils"
