[package]
name = "kollider_hedging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
crossbeam = "0.8.1"
hmac = "0.12.1"
rust_decimal = "1.23.1"
serde =  { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
# tungstenite = "0.17.2"
tungstenite = {version = "0.17.2", features = ["rustls-tls-native-roots"]}
url = "2.1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
dotenv = "0.15.0"

[dependencies.msgs]
path = "../msgs"

[dependencies.xerror]
path = "../xerror"

[dependencies.utils]
path = "../utils"

[dependencies.core_types]
path = "../core_types"

[dependencies.ws_client]
path = "../ws_client"