[package]
name = "msgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
rust_decimal= { version = "1.12.3" }

uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.core_types]
path = "../core_types"