[package]
name = "nostr_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
bincode = "1.3.3"
crossbeam = "0.8.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }

crossbeam-channel = "0.5"
rust_decimal_macros = { version = "1.12.3"}
rust_decimal= { version = "1.12.3" }
slog = "2.5.2"
serde_json = "1.0"

log = { version = "0.4.16" }

tokio = { version = "1.17.0", features = ["full"] }

influxdb2 = "0.1.1"
futures = "0.3.21"
nostr-sdk = { version = "0.18.0" }

[dependencies.msgs]
path = "../msgs"

[dependencies.xerror]
path = "../xerror"

[dependencies.utils]
path = "../utils"

[dependencies.core_types]
path = "../core_types"

[dependencies.models]
path = "../models"