[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
config = { version = "0.9"}
# log4rs = { version = "1.0.0" }
# log = { version = "0.4.16" }

bincode = "1.3.3"
zmq = "0.9.2"