[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
config = { version = "0.9"}
core_types = { path="../core_types" }
slog = { version = "2.5.2"}
slog-async = { version = "2.5.0"}
slog-term = { version = "2.6.0"}

bincode = "1.3.3"
zmq = "0.9.2"