[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1"
config = { version = "0.9"}
core_types = { path="../core_types" }
slog = { version = "2.5.2"}
slog-async = { version = "2.5.0"}
slog-term = { version = "2.6.0"}
bech32 = "0.7.2"
secp256k1 = {version = "0.20.1", features = ["bitcoin_hashes"]}

slack-hook = { version = "0.8.0"}

bincode = "1.3.3"
zmq = "0.9.2"

rdkafka = { version = "0.25", features = ["cmake-build"] }